# LoRe_interp

./: .gitignore  NOTES.md  README.md  lore_prism_heatmap.ipynb  plot_combined_heatmap.py  plot_user_similarity.py  run_full_pipeline.py
apa/: .gitignore  README.md  pyproject.toml  setup_uv.sh
apa/apa/: __init__.py  _logging.py  config.py  democratic_response.py  load_prism.py  lore_adapt.py  lore_basis_interpretability.ipynb  train_lore_bases.py  vote_analysis.py
apa/apa/levers/: __init__.py  query_selection.py  slate_generation.py  voter_aggregation.py  voter_sampling.py
apa/apa/synthetic_prefs/: README.md  __init__.py  curated_questions.txt  eval_prefs.py  historical_prefs.py  profiles.jsonl  sample_data.py
apa/colab_notebook/: LoRe_interp_public-4.ipynb
apa/experiments/: chosen_questions.jsonl  figs.py  filter_output.py  profiles_C016_C020.jsonl  query_responses.jsonl  query_responses_simple.jsonl  utils.py
apa/experiments/checkpoints/: V_K8.pt  W_adapted_hist_C016_C020_filtered.pt  W_seen_K8.pt
apa/experiments/scripts/: generate_prefs_C016_C020.sh  reproduce_paper_votes.sh  run_vote_C016_C020.sh  (+2 more)
apa/scripts/: compare_metrics.py  run_all_centuries_70b.sh  run_hist_adapt.sh  run_hist_prefs_full.sh  select_time_varying_questions.py
apa/tests/: __init__.py  test_config.py  test_democratic_response.py  test_filter_output.py  test_gen_hist_prefs.py  test_imports.py  test_levers.py  test_logging.py  test_lore.py  test_lore_adapt.py  test_lore_model.py  test_preference_gen.py  test_prism_loader.py  test_suitability.py  test_vote_analysis.py
(+11 files in other folders)
